// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Full height 1`] = `
<DocumentFragment>
  <div
    class="pf-c-empty-state pf-m-lg pf-m-full-height"
  >
    <div
      class="pf-c-empty-state__content"
    >
      <div
        class="pf-c-empty-state__header"
      >
        <div
          class="pf-c-empty-state__title"
        >
          <h1
            class="pf-c-empty-state__title-text"
          >
            EmptyState large
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main 1`] = `
<DocumentFragment>
  <div
    class="pf-c-empty-state"
  >
    <div
      class="pf-c-empty-state__content"
    >
      <div
        class="pf-c-empty-state__header"
      >
        <div
          class="pf-c-empty-state__title"
        >
          <h1
            class="pf-c-empty-state__title-text"
          >
            HTTP Proxies
          </h1>
        </div>
      </div>
      <div
        class="pf-c-empty-state__body"
      >
        Defining HTTP Proxies that exist on your network allows you to perform various actions through those proxies.
      </div>
      <div
        class="pf-c-empty-state__footer"
      >
        <div
          class="pf-c-empty-state__actions"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            New HTTP Proxy
          </button>
        </div>
        <div
          class="pf-c-empty-state__actions"
        >
          <button
            aria-disabled="false"
            aria-label="learn more action"
            class="pf-c-button pf-m-link"
            data-ouia-component-id="OUIA-Generated-Button-link-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Learn more about this in the documentation.
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main variant large 1`] = `
<DocumentFragment>
  <div
    class="pf-c-empty-state pf-m-lg"
  >
    <div
      class="pf-c-empty-state__content"
    >
      <div
        class="pf-c-empty-state__header"
      >
        <div
          class="pf-c-empty-state__title"
        >
          <h1
            class="pf-c-empty-state__title-text"
          >
            EmptyState large
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main variant small 1`] = `
<DocumentFragment>
  <div
    class="pf-c-empty-state pf-m-sm"
  >
    <div
      class="pf-c-empty-state__content"
    >
      <div
        class="pf-c-empty-state__header"
      >
        <div
          class="pf-c-empty-state__title"
        >
          <h1
            class="pf-c-empty-state__title-text"
          >
            EmptyState small
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main variant xs 1`] = `
<DocumentFragment>
  <div
    class="pf-c-empty-state pf-m-xs"
  >
    <div
      class="pf-c-empty-state__content"
    >
      <div
        class="pf-c-empty-state__header"
      >
        <div
          class="pf-c-empty-state__title"
        >
          <h1
            class="pf-c-empty-state__title-text"
          >
            EmptyState small
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
